[package]
name = "copy-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
bs58 = "0.5.1"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.24"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "fs"] }
tonic = "0.12.1"
yellowstone-grpc-client = "4.0.0"
yellowstone-grpc-proto = { version = "4.0.0", default-features = false, features = ["plugin"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.0"
toml = "0.8.10"
solana-program = "2.1.7"
solana-sdk = "2.1.7"
solana-transaction-status = "2.1.7"
solana-account-decoder-client-types = "2.1.7"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
chrono = { version = "0.4.26", features = ["serde"] }
pump_interface = { path = "parsers/pump_interface" }
dashmap = "6.1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
